--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@
 
  jobs:
    build:
-     executor: win/default 
+     executor: 
+       name: win/default 
+       shell: bash.exe
      environment:
        ACR_PW: $ACR_PW
 
