--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@
       #  - run: dotnet restore ./aspnet-core/AutomaticAcceptanceTest.sln
       #  - run: dotnet build ./aspnet-core/AutomaticAcceptanceTest.sln
       #  - run: dotnet test ./aspnet-core/AutomaticAcceptanceTest.sln
-       - run: export ACR_PW=$ACR_PW && echo "$ACR_PW" | docker login cicdprototyperegistry.azurecr.io --username cicdprototyperegistry --password-stdin
-       - run: docker build aspnet-core -t cicdprototyperegistry.azurecr.io/cicdprototyperegistry/cicdprototype:$CIRCLE_BUILD_NUM
-       - run: docker push cicdprototyperegistry.azurecr.io/cicdprototyperegistry/cicdprototype:$CIRCLE_BUILD_NUM
+       - run: echo 'export ACR_PW="$ACR_PW"'
+       - run: echo "${ACR_PW}" | docker login cicdprototyperegistry.azurecr.io --username cicdprototyperegistry --password-stdin
+       - run: docker build aspnet-core -t cicdprototyperegistry.azurecr.io/cicdprototyperegistry/cicdprototype:${CIRCLE_BUILD_NUM}
+       - run: docker push cicdprototyperegistry.azurecr.io/cicdprototyperegistry/cicdprototype:${CIRCLE_BUILD_NUM}
