--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@
       #  - run: dotnet restore ./aspnet-core/AutomaticAcceptanceTest.sln
       #  - run: dotnet build ./aspnet-core/AutomaticAcceptanceTest.sln
       #  - run: dotnet test ./aspnet-core/AutomaticAcceptanceTest.sln
+       - run: echo hoi
+       - run: echo $ACR_PW
+       - run: echo ${ACR_PW}
        - run: echo 'export ACR_PW="${ACR_PW}"' >> $BASH_ENV
        - run: echo "${ACR_PW}" | docker login cicdprototyperegistry.azurecr.io --username cicdprototyperegistry --password-stdin
        - run: docker build aspnet-core -t cicdprototyperegistry.azurecr.io/cicdprototyperegistry/cicdprototype:${CIRCLE_BUILD_NUM}
